--- a/app/src/main/res/layout/view_camera.xml
+++ b/app/src/main/res/layout/view_camera.xml
@@ -2,16 +2,18 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
-    <com.touge.floatingview.floating.CircleCameraView
-        android:id="@+id/camera"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:adjustViewBounds="true"
-        android:keepScreenOn="true"
-        app:aspectRatio="4:3"
-        app:autoFocus="true"
-        app:facing="front"
-        app:flash="auto" />
+  <com.touge.floatingview.floating.CircleCameraView
+      android:id="@+id/camera"
+      android:layout_width="70dp"
+      android:layout_height="70dp"
+      android:adjustViewBounds="true"
+      android:keepScreenOn="true"
+      app:aspectRatio="4:3"
+      app:autoFocus="true"
+      app:facing="front"
+      app:flash="auto"
+      />
 </merge>
