--- a/app/src/main/res/layout/view_floating.xml
+++ b/app/src/main/res/layout/view_floating.xml
@@ -2,22 +2,25 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="70dp"
-    android:layout_height="70dp">
+    android:layout_height="70dp"
+    >
 
-    <com.touge.floatingview.floating.FloatingCircleImageView
-        android:id="@+id/avatar"
-        android:layout_width="@dimen/floating_view_size"
-        android:layout_height="@dimen/floating_view_size"
-        android:src="@drawable/ic_avatar"/>
+  <com.touge.floatingview.floating.FloatingCircleImageView
+      android:id="@+id/avatar"
+      android:layout_width="@dimen/floating_view_size"
+      android:layout_height="@dimen/floating_view_size"
+      android:src="@drawable/ic_avatar"
+      />
 
-    <com.touge.floatingview.floating.CircleCameraView
-        android:id="@+id/camera"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:adjustViewBounds="true"
-        android:keepScreenOn="true"
-        app:aspectRatio="4:3"
-        app:autoFocus="true"
-        app:facing="front"
-        app:flash="auto" />
+  <com.touge.floatingview.floating.CircleCameraView
+      android:id="@+id/camera"
+      android:layout_width="70dp"
+      android:layout_height="70dp"
+      android:adjustViewBounds="true"
+      android:keepScreenOn="true"
+      app:aspectRatio="4:3"
+      app:autoFocus="true"
+      app:facing="front"
+      app:flash="auto"
+      />
 </merge>
