--- a/app/src/main/res/layout/view_camera.xml
+++ b/app/src/main/res/layout/view_camera.xml
@@ -9,6 +9,7 @@
       android:id="@+id/camera"
       android:layout_width="70dp"
       android:layout_height="70dp"
+      android:layout_gravity="center"
       android:adjustViewBounds="true"
       android:keepScreenOn="true"
       app:aspectRatio="4:3"
